# rust-opengl

./: Cargo.toml  LICENSE  README.md
assets/shaders/: default.frag  default.vert
src/: app.rs  assets.rs  color.rs  context.rs  engine.rs  lib.rs  main.rs  renderer.rs  system.rs
src/app/: builder.rs
src/assets/: asset.rs
src/color/: hex.rs  rgb.rs  rgba.rs
src/renderer/: buffer.rs  camera.rs  global.rs  pipeline_info.rs  render_target.rs  shader.rs  shaderprogram.rs  texture.rs
src/renderer/render_target/: vertex_array.rs
src/renderer/render_target/vertex_array/: indexbuffer.rs  vertex.rs  vertexbuffer.rs
src/renderer/render_target/vertex_array/vertex/: default.rs
src/renderer/shader/: kind.rs  shader.rs  uniform.rs
src/renderer/shader/shader/: fragmentshader.rs  vertexshader.rs
src/renderer/texture/: image.rs
