[package]
name = "engine"
version = "0.1.0"
authors = ["Anton Hagsér <anton.hagser@epsidel.se>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
rand = "0.8.3"
nalgebra = "0.25.4"
typenum = "1.13.0"
num = "0.4.0"
colored = "2.0.0"
image = "0.23.14"
log = "0.4.14"
env_logger = "0.8.3"
smallvec = "1.6.1"
sysinfo = "0.16.5"
